--- a/ISIProject/ISIProject.csproj
+++ b/ISIProject/ISIProject.csproj
@@ -182,7 +182,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\DivisionMangerController.cs" />
+    <Compile Include="Controllers\DivisionManagerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -312,11 +312,11 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\DivisionManger\Index.cshtml" />
-    <Content Include="Views\DivisionManger\Details.cshtml" />
-    <Content Include="Views\DivisionManger\Create.cshtml" />
-    <Content Include="Views\DivisionManger\Edit.cshtml" />
-    <Content Include="Views\DivisionManger\Delete.cshtml" />
+    <Content Include="Views\DivisionManager\Index.cshtml" />
+    <Content Include="Views\DivisionManager\Details.cshtml" />
+    <Content Include="Views\DivisionManager\Create.cshtml" />
+    <Content Include="Views\DivisionManager\Edit.cshtml" />
+    <Content Include="Views\DivisionManager\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
