Added Use Case UML

--- a/ISIProject/ISIProject.csproj
+++ b/ISIProject/ISIProject.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Models\Division.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\Timesheet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
