--- a/ISIProject/ISIProject.csproj
+++ b/ISIProject/ISIProject.csproj
@@ -184,7 +184,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DepartmentManagerController.cs" />
     <Compile Include="Controllers\DivisionManagerController.cs" />
-    <Compile Include="Controllers\HomeAdministratorController.cs" />
+    <Compile Include="Controllers\EmployeeManagerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -321,6 +321,11 @@
     <Content Include="Views\DepartmentManager\Create.cshtml" />
     <Content Include="Views\DepartmentManager\Edit.cshtml" />
     <Content Include="Views\DepartmentManager\Delete.cshtml" />
+    <Content Include="Views\EmployeeManager\Index.cshtml" />
+    <Content Include="Views\EmployeeManager\Details.cshtml" />
+    <Content Include="Views\EmployeeManager\Create.cshtml" />
+    <Content Include="Views\EmployeeManager\Edit.cshtml" />
+    <Content Include="Views\EmployeeManager\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
