--- a/ISIProject/ISIProject.csproj
+++ b/ISIProject/ISIProject.csproj
@@ -183,6 +183,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DepartmentManagerController.cs" />
+    <Compile Include="Controllers\DeptManagerEmployeeController.cs" />
     <Compile Include="Controllers\DivisionManagerController.cs" />
     <Compile Include="Controllers\EmployeeManagerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -328,6 +329,7 @@
     <Content Include="Views\EmployeeManager\Edit.cshtml" />
     <Content Include="Views\EmployeeManager\Delete.cshtml" />
     <Content Include="Views\Timesheet\Index.cshtml" />
+    <Content Include="Views\DeptManagerEmployee\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
