Audit functionality added

--- a/ISIProject/ISIProject.csproj
+++ b/ISIProject/ISIProject.csproj
@@ -183,8 +183,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\CalendarEvent.cs" />
-    <Compile Include="Controllers\ClientManagerController.cs" />
+    <Compile Include="Controllers\CalendarEvent.cs" />    <Compile Include="Controllers\AuditController.cs" />    <Compile Include="Controllers\ClientManagerController.cs" />
     <Compile Include="Controllers\DepartmentManagerController.cs" />
     <Compile Include="Controllers\DeptManagerEmployeeController.cs" />
     <Compile Include="Controllers\DeptManagerProjectsController.cs" />
@@ -201,6 +200,8 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Activity.cs" />
+    <Compile Include="Models\AuditModel.cs" />
+    <Compile Include="Models\AuditSelections.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\CompanyContext.cs" />
     <Compile Include="Models\Department.cs" />
@@ -360,6 +361,7 @@
     <Content Include="Views\ProjectManager\Create.cshtml" />
     <Content Include="Views\ProjectManager\Delete.cshtml" />
     <Content Include="Views\DeptManagerProjects\Index.cshtml" />
+    <Content Include="Views\Audit\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
