--- a/ISIProject/ISIProject.csproj
+++ b/ISIProject/ISIProject.csproj
@@ -189,9 +189,9 @@
     <Compile Include="Controllers\AuditController.cs" />
     <Compile Include="Controllers\ClientManagerController.cs" />
     <Compile Include="Controllers\DepartmentManagerController.cs" />
-    <Compile Include="Controllers\DivisionReportController.cs" />
-    <Compile Include="Controllers\EmployeesPerProjectReportController.cs" />
-    <Compile Include="Controllers\EmployeeTimePerProjectReportController.cs" />
+	<Compile Include="Controllers\DivisionReportController.cs" />
+	<Compile Include="Controllers\EmployeesPerProjectReportController.cs" />
+	<Compile Include="Controllers\EmployeeTimePerProjectReportController.cs" />
     <Compile Include="Controllers\DeptManagerEmployeeController.cs" />
     <Compile Include="Controllers\DeptManagerProjectsController.cs" />
     <Compile Include="Controllers\DeptManagerTimesheetController.cs" />
@@ -200,7 +200,9 @@
     <Compile Include="Controllers\EmployeeManagerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProjectManagerController.cs" />
-    <Compile Include="Controllers\EmployeeTimesheetController.cs" />    <Compile Include="Controllers\DepartmentReportController.cs" />    <Compile Include="Controllers\WorkingHoursPerProjectReportController.cs" />
+	<Compile Include="Controllers\EmployeeTimesheetController.cs" />   
+	<Compile Include="Controllers\DepartmentReportController.cs" />    
+	<Compile Include="Controllers\WorkingHoursPerProjectReportController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -219,10 +221,10 @@
     <Compile Include="Models\DeptManagerSelectProjects.cs" />
     <Compile Include="Models\DirectorSelect.cs" />
     <Compile Include="Models\Division.cs" />
-    <Compile Include="Models\DivisionReportModel.cs" />
+	<Compile Include="Models\DivisionReportModel.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Project.cs" />
-    <Compile Include="Models\DepartmentReportModel.cs" />
+	<Compile Include="Models\DepartmentReportModel.cs" />
     <Compile Include="Models\Timesheet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.svc.cs">
@@ -297,8 +299,16 @@
     <Content Include="Images\TimeManagementLogo2.jpg" />
     <Content Include="Scripts\jquery-migrate-1.2.1.js" />
     <Content Include="Scripts\jquery-migrate-1.2.1.min.js" />
-    <Content Include="Scripts\TimeSheet Dept Mangager.js" />    <Content Include="Scripts\EmployeesPerProjectReport.js" />    <Content Include="Scripts\jquery-1.8.2.js" />
+    <Content Include="Scripts\TimeSheet Dept Mangager.js" />
+	<Content Include="Scripts\TimeSheet Dept Mangager.js" />    
+	<Content Include="Scripts\EmployeesPerProjectReport.js" />    
+	<Content Include="Scripts\jquery-1.8.2.js" />
+    <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
+    <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="Scripts\jquery-1.9.1.js" />
+    <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\jquery-1.9.1.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
@@ -313,9 +323,9 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\EmployeeTimePerProject.js" />
+	<Content Include="Scripts\EmployeeTimePerProject.js" />
     <Content Include="Scripts\TimeSheet.js" />
-    <Content Include="Scripts\WorkingHoursPerProjectReport.js" />
+	 <Content Include="Scripts\WorkingHoursPerProjectReport.js" />
     <Content Include="Service1.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -382,11 +392,12 @@
     <Content Include="Views\ProjectManager\Delete.cshtml" />
     <Content Include="Views\DeptManagerProjects\Index.cshtml" />
     <Content Include="Views\Audit\Index.cshtml" />
-    <Content Include="Views\DeptManagerTimesheet\Index.cshtml" />    <Content Include="Views\DepartmentReport\Index.cshtml" />
+    <Content Include="Views\DeptManagerTimesheet\Index.cshtml" /> 
+	  <Content Include="Views\DepartmentReport\Index.cshtml" />
     <Content Include="Views\EmployeeTimePerProjectReport\Index.cshtml" />
     <Content Include="Views\EmployeesPerProjectReport\Index.cshtml" />
-    <Content Include="Views\WorkingHoursPerProjectReport\Index.cshtml" />
-    <Content Include="Views\DivisionReport\Index.cshtml" />  </ItemGroup>
+	  <Content Include="Views\WorkingHoursPerProjectReport\Index.cshtml" />
+	  <Content Include="Views\DivisionReport\Index.cshtml" />  </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
